# AI-Powered-BI

./: .dockerignore  .env.cloud  .env.example  .env.selfhosted  .gitignore  Dockerfile  InsightForge_Assistant.ipynb  Makefile  README.md  alembic.ini  docker-compose.yml  insightforge_app.py  pyproject.toml  requirements.txt  ruff.toml
.cursor/skills/insightforge-bi-project/: SKILL.md
.cursor/skills/langchain-rag-pipeline/: SKILL.md
.cursor/skills/sales-data-analysis/: SKILL.md
.cursor/skills/streamlit-plotly-dashboard/: SKILL.md
.github/workflows/: pylint.yml  tests.yml
alembic/: env.py
alembic/versions/: 001_create_trace_tables.py
bifrost/: config.json
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
insightforge/: __init__.py  config.py
insightforge/agent/: __init__.py  graph.py  state.py
insightforge/agent/nodes/: context_assembler.py  generator.py  information_retriever.py  query_planner.py  response_qa.py  retrieval_planner.py
insightforge/agent/tools/: __init__.py  data_analysis.py  statistical.py  vector_search.py
insightforge/db/: connection.py
insightforge/evaluation/: __init__.py  qa_eval.py
insightforge/llm/: __init__.py  guardrail.py  provider.py
insightforge/observability/: __init__.py  collector.py  models.py  repository.py  tracing.py
insightforge/prompts/: __init__.py  templates.py
insightforge/retrieval/: __init__.py  documents.py  vectorstore.py
tests/: conftest.py
tests/e2e/: test_chat_flow.py
tests/integration/: test_agent_graph.py
tests/unit/: test_config.py  test_documents.py  test_guardrail.py  test_provider.py  test_tools.py  test_vectorstore.py
